[workspace]
resolver = "2"
members = [
    "bot",
    "yellowstone-grpc-client", # 2.0.0
    "yellowstone-grpc-proto", # 2.0.0
]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]

time = "0.3.36"
rayon = "1.10.0"
itertools = "0.13.0"
arraydeque = { version = "0.5.1" }
tokio = { version = "1.38", features = ["full"] }
log = "0.4.17"
url = "2.5.1"
async-trait = "0.1.80"
sha3 = "0.10.8"
serde_derive = "1.0.203"
chrono = "0.4.38"
simple_logger = "5.0.0"
anyhow = "1.0.86"
colored = "2.1.0"
fern = { version = "0.7.0", features = ["colored"] }
futures = "0.3.30"
eyre = "0.6.12"
hashbrown = "0.15.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = { version = "1.0.117", features = ["alloc"] }
bigdecimal = "0.4.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json"]}
dashmap = { version = "6.0.1", features = ["serde"] }
tracing = "0.1.40"
signalrs-client = "0.1.1"
thiserror = "1.0.60"
num-bigfloat = "1.7.1"
blst = "^0.3.12"
arc-swap = "1.7.1"
scopeguard = "1.2.0"
once_cell = "1.19.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"] }

maplit = "1.0.2"

clap = "4.3.0"

metrics = { version = "0.24.0" }
metrics-util = { version = "0.18.0" }
metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"]}
quanta = { version = "0.12.3" }

rust_decimal = { version = "1.35", features = ["serde-with-arbitrary-precision", "serde-with-float"]}
rust_decimal_macros = "1.34.2"

futures-util = "0.3.30"

binance-rs-async = { version = "1.3.2", features = [ "wallet_api" ] }

parking_lot = "0.12.3"

bincode = "1.3.3"
prost = "0.13.1"

tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-health = "0.12.3"

yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "2.0.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "2.0.0", default-features = false }
protobuf = { version = "3.7.1", features = [ "with-bytes" ] }
protoc-bin-vendored = "3.1.0"

subtle = { version = "2.5.0" }
zeroize = { version = "1.7", default-features = false }

solana-account-decoder = "=2.0.15"
solana-logger = "=2.0.15"
solana-sdk = "=2.0.15"
solana-client = "=2.0.15"
solana-transaction-status = "=2.0.15"
solana-perf = { version = "=2.0.15" }
solana-svm = { version = "=2.0.15" }
solana-runtime = { version = "=2.0.15" }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = "4.0.0"
solana-inline-spl = "=2.0.15"

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils= "18.0.0"

base64 = "0.22.1"
bb8 = "0.8.6"
bs58 = "0.5.1"
zstd = "0.13.2"

tikv-jemallocator = "0.6.0"

bytes = "1.3.0"

actix = "0.13.5"
actix-web = "4.8.0"
env_logger = "0.11.3"
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "d020f92", features = ["actix_extras", "chrono"]}
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "d020f92", features = ["actix-web"]}
utoipa-scalar = { git = "https://github.com/juhaku/utoipa.git", rev = "d020f92", features = ["actix-web"]}
utoipa-redoc = { git = "https://github.com/juhaku/utoipa.git", rev = "d020f92", features = ["actix-web"]}
utoipa-rapidoc = { git = "https://github.com/juhaku/utoipa.git", rev = "d020f92", features = ["actix-web"]}

[patch.crates-io]
aes-gcm-siv = { git = 'https://github.com/block-mesh/AEADs', branch = 'rustls-dep-hell-1-18' }
curve25519-dalek = { git = "https://github.com/block-mesh/curve25519-dalek", branch = "rustls-dep-hell-1-18" }