[workspace]
resolver = "2"
members = [
    "bot"
]


[workspace.package]
edition = "2021"
publish = false
authors = [""]
homepage = ""
repository = ""
license = "Apache-2.0"
keywords = [""]


[workspace.dependencies]

time = "0.3.36"
rayon = "1.10.0"
itertools = "0.13.0"
arraydeque = { version = "0.5.1" }

tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"], default-features = false }

log = "0.4.17"
url = "2.5.1"
async-trait = "0.1.80"
sha3 = "0.10.8"
serde_derive = "1.0.203"
chrono = { version = "0.4.38", features = ["serde"] }
simple_logger = "5.0.0"
anyhow = "1.0.86"
colored = "2.1.0"
fern = { version = "0.7.0", features = ["colored"] }
futures = "0.3.30"
eyre = "0.6.12"
hashbrown = "0.15.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = { version = "1.0.117", features = ["alloc"] }

reqwest = { version = "0.12", features = ["json"]}
dashmap = { version = "6.0.1", features = ["serde"] }
tracing = "0.1.40"
signalrs-client = "0.1.1"
thiserror = "1.0.60"
num-bigfloat = "1.7.1"
blst = "^0.3.12"
arc-swap = "1.7.1"
scopeguard = "1.2.0"
once_cell = "1.19.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"] }

maplit = "1.0.2"

clap = "4.3.0"

async_once = "0.2.6"
static_init = { version = "1.0.4" }

metrics = { version = "0.24.0" }
metrics-util = { version = "0.18.0" }
metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"]}

quanta = { version = "0.12.3" }

rust_decimal = { version = "1.35", features = ["serde-with-arbitrary-precision", "serde-with-float"]}
rust_decimal_macros = "1.34.2"

futures-util = "0.3.30"

parking_lot = "0.12.3"

bincode = "1.3.3"
prost = "0.13.1"

tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-health = "0.12.3"

subtle = { version = "2.5.0" }
zeroize = { version = "1.7", default-features = false }

solana-cli-output = "=2.2.20"
solana-client = "=2.2.20"
solana-sdk = "=2.2.1"
solana-logger = "=2.2.20"
solana-program = "=2.2.1"
solana-program-test = "=2.2.20"
solana-account-decoder = "=2.2.20"
solana-rpc-client = "=2.2.20"
solana-rpc-client-api = "=2.2.20"
solana-quic-client = "=2.2.20"
solana-transaction-status-client-types = "=2.2.20"
solana-storage-proto = "=2.2.20"
solana-transaction-status = "=2.2.20"
solana-account-info = "=2.2.1"
solana-account = "=2.2.1"
solana-signature = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-program-entrypoint = "=2.2.1"
solana-msg = "=2.2.1"
solana-cpi = "=2.2.1"
solana-instruction = "=2.2.1"
solana-decode-error = "=2.2.1"
solana-program-error = "=2.2.1"
solana-clock = { version = "2.2.1" }
solana-connection-cache = { version = "=2.2.20", default-features = false }
solana-cli-config = { version = "=2.2.20" }
solana-commitment-config = "2.2.1"
solana-net-utils = { version = "=2.2.20" }
solana-signer = "=2.2.1"
solana-metrics = "=2.2.20"
solana-measure = { version = "=2.2.20" }
solana-keypair = "=2.2.1"
solana-quic-definitions = "=2.2.1"
solana-streamer = { version = "=2.2.20" }
solana-time-utils = "=2.2.1"
solana-tls-utils = { version = "=2.2.20" }
solana-client-traits = "2.2.1"
solana-epoch-info = "2.2.1"
solana-message = "2.2.1"
solana-pubsub-client = { version = "=2.2.20" }
solana-transaction = "2.2.2"
solana-transaction-error = "2.2.1"

spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

dotenv = { version = "=0.15" }
dotenvy = { git = "https://github.com/allan2/dotenvy" }

solana-perf = "=2.2.20"
solana-inline-spl = "=2.2.20"

criterion = "0.5.1"

jsonrpsee = "0.25.1"

base64 = "0.22.1"
bb8 = "0.8.6"
bs58 = "0.5.1"
zstd = "0.13.2"

tikv-jemallocator = "0.6.0"

bytes = "1.3.0"

smallvec = "1.13.2"

rustls-webpki = "0.102"

socketioxide = { version = "0.16.1", features = ["tracing"] }

axum = "0.8.1"
tower = "0.5.2"
tower-http = "0.6.2"
tower-layer = "0.3.3"
tower-service = "0.3.3"

actix = "0.13.5"
actix-web = "4.11.0"
actix-cors = { version = "0.7.1"}
env_logger = "0.11.3"

utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"]}
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"]}
utoipa-scalar = { version = "0.3.0", features = ["actix-web"]}
utoipa-redoc = { version = "5.0.0", features = ["actix-web"]}
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"]}

carbon-core = "0.9.1"
carbon-system-program-decoder = "0.9.1"
carbon-token-2022-decoder = "0.9.1"
carbon-token-program-decoder = "0.9.1"
carbon-associated-token-account-decoder = "0.9.1"
carbon-yellowstone-grpc-datasource = "0.9.1"

yellowstone-grpc-proto = { version = "6.1.0" }
yellowstone-grpc-client = { version = "6.1.0" }

tokio-cron-scheduler = "0.13.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rmpv = { version = "1.3.0", features = ["with-serde"] }

argon2 = "0.5.3"

[patch.crates-io]
aes-gcm-siv = { git = 'https://github.com/block-mesh/AEADs', branch = 'rustls-dep-hell-1-18' }
curve25519-dalek = { git = "https://github.com/block-mesh/curve25519-dalek", branch = "rustls-dep-hell-1-18" }

[profile.maxperf]
inherits = "release"
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1

