[package]
name = "yellowstone-grpc-client"
version = "2.0.0"
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Simple Client"
license = "Apache-2.0"
publish = true

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
thiserror ={ workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tonic-health = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
