[package]
name = "yellowstone-grpc-proto"
version = "2.0.0"
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Protobuf Definitions"
license = "Apache-2.0"
publish = true

[dependencies]
bincode = { workspace = true }
prost = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
